# SecScore

./: .eslintcache  .gitignore  .gitmodules  .prettierignore  AGENTS.md  AI-plan.txt  CMakeLists.txt  MCP-使用说明.md  README.md  STEP_1_COMPLETED.md  SecScoreDB-WebSockets.md  SecScore基本构思.md  UI_DESIGN.md  agents.md  build.bat  clean.bat  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  secscore.keystore  settings-window.html  tailwind.config.js  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  vite.config.ts  vitest.config.ts  新建 文本文档.md
.cargo/: config.toml
.claude/: settings.local.json
.copying/hosting/: hostApplication.ts  hostBuilder.ts  index.ts  serviceCollection.ts  tokens.ts
.github/workflows/: build.yml
.lingma/rules/: rules.md
.sqlx/: config.json
.trae/documents/: url-registration-robustness.md  实现带有四个标签页的设置界面.md  教育积分桌面软件开发计划.md
AUTH/: API.MD  AUTH.MD  OAUTH_FLOW.MD  TROUBLESHOOTING.md
ai_ref/: disposable.md  work_plan.md
build-local/: CMakeCache.txt
build-local/.qt/qml_imports/: SecScore_build.rsp  SecScore_conf.rsp
build-mingw/: CMakeCache.txt
build-mingw/.qt/qml_imports/: SecScore_build.rsp  SecScore_conf.rsp
build-mingw/.qt/rcc/: SecScore_raw_qml_0.qrc  SecScore_raw_qml_0_extra_qmldirs.qrc  qmake_SecScore.qrc
build-mingw/.rcc/qmlcache/: all_aotstats.aotstatslist  module_SecScore.aotstatslist
build-mingw/SecScore/: SecScore_qml_module_dir_map.qrc  qmldir
build-mingw/SecScore/qml/: App.qml
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build-release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-release/.qt/deploy_qml_imports/: SecScore.cmake
build-release/SecScore_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
cmake/: DeployQt.cmake
old-ss/: AGENTS.md
plugin-wiki/: 插件开发指南.md
public/: about-content.json
qml/: App.qml  Main.qml  qmldir
qml/components/: SyncStatusCard.qml  ThemedButton.qml
qml/pages/: EventsPage.qml  LeaderboardPage.qml  SettingsPage.qml  StudentsPage.qml  SyncPage.qml
resources/: ABOUT.md  qml.qrc  看板SQL生成提示词.md
scripts/: afterPack.cjs  banyou-login-playwright.cjs  clean-db.mjs  clean.cjs  convert-icon.mjs  generate-about-content.mjs  ios-sim.js  tauri-dev.cjs
scripts/ci/: apply-version.mjs  parse-commit.mjs
src/: AGENTS.md  App.tsx  ClientContext.ts  index.css  main.cpp  main.tsx  react-19-patch.ts  settings-window.tsx
src-tauri/: AGENTS.md  Cargo.toml  data.sql  tauri.conf.json
src-tauri/.sqlx/: config.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: app.rs  auth.rs  auto_score.rs  board.rs  data.rs  database.rs  event.rs  filesystem.rs  http_server.rs  log.rs  mcp.rs  mod.rs  oauth_server.rs  plugin.rs  reason.rs  response.rs  reward.rs  settings.rs  settlement.rs  student.rs  sync.rs  tag.rs  theme.rs  window.rs
src-tauri/src/database/: mod.rs
src-tauri/src/db/: connection.rs  migration.rs  mod.rs  schema.rs
src-tauri/src/db/entities/: mod.rs  reasons.rs  reward_redemptions.rs  reward_settings.rs  score_events.rs  student_tags.rs  students.rs  tags.rs
src-tauri/src/db/repositories/: event_repo.rs  mod.rs  reason_repo.rs  settlement_repo.rs  student_repo.rs  tag_repo.rs
src-tauri/src/models/: mod.rs  reason.rs  score_event.rs  settlement.rs  student.rs  student_tag.rs  tag.rs
src-tauri/src/services/: auth.rs  auto_score.rs  data.rs  logger.rs  mod.rs  permission.rs  plugin.rs  security.rs  settings.rs  theme.rs
src-tauri/src/utils/: mod.rs
src/assets/: main.css
src/components/: AutoScoreManager.tsx  BoardManager.tsx  BuiltinPluginManager.tsx  ContentArea.tsx  EventHistory.tsx  Home.tsx  Leaderboard.tsx  OAuthCallback.tsx  OAuthLogin.tsx  PluginManager.tsx  ReasonManager.tsx  RewardExchange.tsx  RewardSettings.tsx  ScoreManager.tsx  ScoreSyncPanel.tsx  SectlCloudStorageManager.tsx  SectlCloudSyncPanel.tsx  SectlKVStorageManager.tsx  SectlLoginButton.tsx  SectlSettingsPanel.tsx  Settings.tsx  SettingsWindow.tsx  SettlementHistory.tsx  Sidebar.tsx  StudentManager.tsx  TagEditorDialog.tsx  ThemeEditor.tsx  ThemeQuickSettings.tsx  TitleBar.tsx  Versions.tsx  WindowControls.tsx  Wizard.tsx
src/components/OOBE/: OOBE.tsx  (+1 more)
src/context/: ThemeContext.tsx
src/contexts/: SectlContext.tsx  ServiceContext.tsx  ThemeContext.tsx  ThemeEditorContext.tsx
src/core/: App.cpp  App.h  ThemeService.cpp  ThemeService.h
src/data/: Database.cpp  Database.h
src/di/: AppServiceRegistry.ts  DisposablePlugin.ts  WindowManager.ts  index.ts
src/domain/: ScoreService.cpp  ScoreService.h
src/hooks/: useBuiltinPlugins.ts  useConfig.ts  useLogger.ts  useOAuthPersist.ts  useResponsive.ts
src/i18n/: index.ts
src/main/: context.ts  index.ts
src/network/: WsClient.cpp  WsClient.h
src/pages/: PointOperation.tsx  PointRecords.tsx  Ranking.tsx  Settings.tsx  StudentManagement.tsx
src/plugins/: runtime.ts
src/preload/: index.ts  types.ts
src/renderer/: index.html
src/services/: AutoScoreService.ts  ConfigService.ts  LoggerService.ts  StudentService.ts  lanApi.ts  scoreSyncService.ts  sectl.ts  sectlAuth.ts  sectlCloudStorage.test.ts  sectlCloudStorage.ts  sectlCloudSync.ts  sectlKVStorage.test.ts  sectlKVStorage.ts  sectlNotification.test.ts  sectlNotification.ts  syncClient.ts
src/shared/: fontFamily.ts  kernel.ts  mobileNavigation.ts
src/sync/: SyncEngine.cpp  SyncEngine.h
src/utils/: color.ts  studentAvatar.ts
src/views/: SectlCloudView.tsx
src/workers/: xlsxWorker.ts
sync-server/: Cargo.toml  README.md  docker-compose.yml
sync-server/migrations/: 0001_initial.sql  0002_account_snapshots.sql
sync-server/scripts/: smoke-multiclient.sh  smoke-sync.sh  start-local.sh
sync-server/src/: main.rs
themes/: README.md  acrylic-auto.json  acrylic-dark.json  acrylic-light.json  amber.json  custom.json  cyan.json  dark.json  default.json  green.json  mica-auto.json  mica-dark.json  mica-light.json  mica.json  pastel.json  purple.json
(+127 files in other folders)
