[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"

sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
tokio = { version = "1", features = ["full"] }
argon2 = { version = "0.5", features = ["std", "password-hash"] }
password-hash = { version = "0.5", features = ["rand_core"] }
rand = "0.8"

anyhow = "1"
thiserror = "1"

chrono = { version = "0.4", features = ["serde", "std"] }

[dev-dependencies]
sqlx-cli = { version = "0.7", features = ["sqlite"] }
