[package]
name = "secscore"
version = "1.0.0"
description = "SecScore - Security Score Application"
authors = ["SecScore Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "secscore_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = "0.7"
rmcp = { version = "1.2", features = ["transport-streamable-http-server"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres"] }
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
once_cell = "1"
parking_lot = { version = "0.12", features = ["send_guard"] }
dirs = "6.0.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
