[package]
name = "secscore-sync-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }

